# rag-eval-tuning

./: .gitignore  Makefile  Projet01_Guide_Complet.md  README.md  config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
data/corpus/: 01-conges-rtt.md  02-teletravail.md  03-notes-de-frais.md  04-securite-informatique.md  05-onboarding.md  06-materiel-support-it.md  07-formation.md  08-voyages-professionnels.md  09-avantages-sociaux.md  10-offboarding.md
data/eval/: questions.json
notebooks/: analysis.ipynb
results/: results.csv
scripts/: ask.py  make_figures.py  run_eval.py
src/ragkit/: __init__.py  chunking.py  config.py  embeddings.py  evaluate.py  langchain_pipeline.py  llm.py  loaders.py  metrics.py  pipeline.py  vectorstore.py
tests/: test_pipeline.py
